# rust-ccg

./: .gitignore  Cargo.toml  pyproject.toml
python/rust_ccg/: __init__.py  __init__.pyi
src/: lib.rs
src/cards/: attributes.rs  definition.rs  instance.rs  mod.rs  registry.rs
src/core/: action.rs  config.rs  entity.rs  mod.rs  player.rs  rng.rs  state.rs
src/effects/: effect.rs  mod.rs  resolver.rs  targeting.rs
src/games/: mod.rs
src/games/simple/: game.rs  mod.rs
src/mcts/: config.rs  mod.rs  node.rs  policy.rs  search.rs  stats.rs  tree.rs
src/nn/: encoder.rs  mod.rs  traits.rs
src/python/: mod.rs  py_core.rs  py_games.rs  py_nn.rs  py_self_play.rs  py_training.rs
src/rules/: engine.rs  mod.rs
src/stack/: immediate.rs  mod.rs  priority.rs
src/training/: mod.rs  self_play.rs  trajectory.rs
src/triggers/: condition.rs  event.rs  mod.rs  registry.rs
src/zones/: manager.rs  mod.rs
tests/: deckbuilder_tests.rs  mcts_tests.rs  n_player_tests.rs  simultaneous_tests.rs  stack_tests.rs  training_tests.rs  trigger_tests.rs
