[package]
name = "rust-ccg"
version = "0.1.0"
edition = "2021"
description = "A general-purpose card game engine for RL/MCTS training"
license = "MIT"

[lib]
name = "rust_ccg"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Persistent data structures for O(1) clone (critical for MCTS)
im = { version = "15", features = ["serde"] }

# Deterministic RNG
rand = "0.8"
rand_chacha = "0.3"

# Performance utilities
smallvec = { version = "1.11", features = ["serde"] }
rustc-hash = "1.1"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
serde_json = "1"

[features]
default = []
python = ["pyo3", "numpy"]

# TODO: Add benchmarks later
# [[bench]]
# name = "state_clone"
# harness = false

[profile.release]
lto = true
codegen-units = 1
