[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rust-ccg"
version = "0.1.0"
description = "A card game engine for AlphaZero-style training"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["game", "ai", "mcts", "alphazero", "reinforcement-learning"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
]
torch = [
    "torch>=2.0",
    "numpy>=1.20",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "rust_ccg"
